<resources>
    <string name="app_name">RegistroEmpleaos</string>
    <string name="txt_id_hint">ID: </string>
    <string name="txt_name_hint">your name: </string>
    <string name="txt_age_hint">age: </string>

    <string name="btn_save_text">Save </string>
    <string name="btn_consult_screen">consult</string>
    <string name="btn_consult_text">Consult </string>
    <string name="btn_modify_text">modify </string>
    <string name="btn_delete_text">delete </string>

    <string name="lbl_id_text">ID: </string>
    <string name="lbl_name_text">Name: </string>
    <string name="lbl_age_text">Age: </string>
</resources>
